--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -24,8 +24,10 @@ jobs:
         env:
           SEMGREP_RULES: >-
             p/default
+        continue-on-error: true
 
-      - name: Upload SARIF
+      - name: Upload SARIF (if present)
+        if: always() && hashFiles('semgrep.sarif') != ''
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: semgrep.sarif
