--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
       - name: Run tests
         run: ./gradlew test --no-daemon || true
 
+      - name: Run Detekt
+        run: ./gradlew detekt --no-daemon || true
+
       - name: Upload build reports
         if: always()
         uses: actions/upload-artifact@v4
