--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ technical-analysis = "0.1.2"
 binance-sdk = "0.0.6"
 jupiter = "5.10.2"
 detekt = "1.23.6"
+hikari = "5.1.0"
 
 [libraries]
 # self SDKs
@@ -58,6 +59,9 @@ gradle-kotlinx-serialization = { module = "org.jetbrains.kotlin:kotlin-serializa
 
 # Detekt
 detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
+
+# DB Pool
+hikari-cp = { group = "com.zaxxer", name = "HikariCP", version.ref = "hikari" }
 
 # Tests
 jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "jupiter" }
