feat: add SSL support for PostgreSQL connections
- Add DatabaseConfig data class to reduce parameter count (fix Detekt LongParameterList)
- Add SSL certificate support via AIFB_POSTGRES_SSL_CERT_PATH
- Add SSL mode configuration via AIFB_POSTGRES_SSL_MODE
- Create placeholder SSL certificate file at configs/ssl/ca-cert.pem
- Update .gitignore to exclude real certificates but keep placeholder
- Update all integration tests to use new DatabaseConfig API
- Remove sensitive data from README (repository is now public)
- Update documentation with SSL configuration examples

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 .env
 .env.*
 
+# SSL certificates (keep placeholder files, ignore real certificates)
+configs/ssl/*.pem
+configs/ssl/*.crt
+configs/ssl/*.key
+!configs/ssl/ca-cert.pem
+
 # IDE settings
 .idea/
 .vscode/
