--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ configs/ssl/*.pem
 configs/ssl/*.crt
 configs/ssl/*.key
 !configs/ssl/ca-cert.pem
+!configs/ssl/yandex-cloud-root-ca.pem
 
 # IDE settings
 .idea/
@@ -15,3 +16,6 @@ configs/ssl/*.key
 # Gradle
 .gradle/
 **/build/
+ 
+# Local DB credentials (do not commit)
+configs/db/credentials.properties
