ci: run tests in CI and Release workflows\n\n- Enable full build with tests in CI\n- Add test step to Release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,11 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
+      - name: Run tests
+        run: ./gradlew clean test --no-daemon
+
       - name: Build distributables
-        run: ./gradlew :app:clean :app:build :app:distZip :app:distTar --no-daemon
+        run: ./gradlew :app:build :app:distZip :app:distTar --no-daemon
 
       - name: Create GitHub Release
         id: create_release
