--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
 
-      - name: Build (no tests for now)
-        run: ./gradlew clean build -x test --no-daemon
-
-      - name: Run unit tests
-        run: ./gradlew test --no-daemon
+      - name: Build (with tests)
+        run: ./gradlew clean build --no-daemon
 
       - name: Prepare SSL certificate (if provided)
         if: ${{ secrets.AIFB_POSTGRES_SSL_CERT_BASE64 != '' }}
