--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      AIFB_POSTGRES_URL: ${{ secrets.AIFB_POSTGRES_URL }}
+      AIFB_POSTGRES_USER: ${{ secrets.AIFB_POSTGRES_USER }}
+      AIFB_POSTGRES_PASSWORD: ${{ secrets.AIFB_POSTGRES_PASSWORD }}
+      AIFB_POSTGRES_SSL_CERT_BASE64: ${{ secrets.AIFB_POSTGRES_SSL_CERT_BASE64 }}
     services:
       postgres:
         image: postgres:16-alpine
@@ -43,16 +48,16 @@ jobs:
         run: ./gradlew clean build --no-daemon
 
       - name: Prepare SSL certificate (if provided)
-        if: ${{ secrets.AIFB_POSTGRES_SSL_CERT_BASE64 != '' }}
+        if: ${{ env.AIFB_POSTGRES_SSL_CERT_BASE64 != '' }}
         run: |
           mkdir -p configs/ssl
-          echo "${{ secrets.AIFB_POSTGRES_SSL_CERT_BASE64 }}" | base64 -d > configs/ssl/yandex-cloud-root-ca.pem
+          echo "${{ env.AIFB_POSTGRES_SSL_CERT_BASE64 }}" | base64 -d > configs/ssl/yandex-cloud-root-ca.pem
       
       - name: Run DB integration tests (features:db)
         env:
-          AIFB_POSTGRES_URL: ${{ secrets.AIFB_POSTGRES_URL }}
-          AIFB_POSTGRES_USER: ${{ secrets.AIFB_POSTGRES_USER }}
-          AIFB_POSTGRES_PASSWORD: ${{ secrets.AIFB_POSTGRES_PASSWORD }}
+          AIFB_POSTGRES_URL: ${{ env.AIFB_POSTGRES_URL }}
+          AIFB_POSTGRES_USER: ${{ env.AIFB_POSTGRES_USER }}
+          AIFB_POSTGRES_PASSWORD: ${{ env.AIFB_POSTGRES_PASSWORD }}
           AIFB_POSTGRES_SSL_CERT_PATH: configs/ssl/yandex-cloud-root-ca.pem
           AIFB_POSTGRES_SSL_MODE: verify-full
         run: ./gradlew :features:db:test --no-daemon
