--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,22 +45,32 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Build (with tests)
-        run: ./gradlew clean build --no-daemon
+        run: ./gradlew clean build --no-daemon --stacktrace --info
 
       - name: Prepare SSL certificate (if provided)
         if: ${{ env.AIFB_POSTGRES_SSL_CERT_BASE64 != '' }}
         run: |
           mkdir -p configs/ssl
           echo "${{ env.AIFB_POSTGRES_SSL_CERT_BASE64 }}" | base64 -d > configs/ssl/yandex-cloud-root-ca.pem
-      
-      - name: Run DB integration tests (features:db)
+
+      - name: Run DB integration tests against secrets DB
+        if: ${{ env.AIFB_POSTGRES_URL != '' }}
         env:
           AIFB_POSTGRES_URL: ${{ env.AIFB_POSTGRES_URL }}
           AIFB_POSTGRES_USER: ${{ env.AIFB_POSTGRES_USER }}
           AIFB_POSTGRES_PASSWORD: ${{ env.AIFB_POSTGRES_PASSWORD }}
           AIFB_POSTGRES_SSL_CERT_PATH: configs/ssl/yandex-cloud-root-ca.pem
           AIFB_POSTGRES_SSL_MODE: verify-full
-        run: ./gradlew :features:db:test --no-daemon
+        run: ./gradlew :features:db:test --no-daemon --stacktrace --info
+
+      - name: Run DB integration tests against local service
+        if: ${{ env.AIFB_POSTGRES_URL == '' }}
+        env:
+          AIFB_POSTGRES_URL: jdbc:postgresql://localhost:5432/aifb
+          AIFB_POSTGRES_USER: aifb
+          AIFB_POSTGRES_PASSWORD: aifb
+          AIFB_POSTGRES_SSL_MODE: disable
+        run: ./gradlew :features:db:test --no-daemon --stacktrace --info
 
       - name: Run Detekt
         run: ./gradlew detekt --no-daemon || true
