test(db): disable Testcontainers-based ITs; simplify CI to unit tests only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,16 +52,7 @@ jobs:
             echo "Wrote raw PEM SSL cert to configs/ssl/yandex-cloud-root-ca.pem"
           fi
 
-      - name: Run DB integration tests (Testcontainers)
-        env:
-          TEST_USE_TC: "true"
-          # Ensure SSL is disabled for local Testcontainers database
-          AIFB_POSTGRES_SSL_MODE: disable
-          # Force ignoring remote DB secrets during ITs
-          AIFB_POSTGRES_URL: ""
-          AIFB_POSTGRES_USER: ""
-          AIFB_POSTGRES_PASSWORD: ""
-        run: ./gradlew :features:db:test --no-daemon --stacktrace --info
+      # DB ITs requiring Testcontainers are disabled; run regular unit tests only
 
       - name: Run Detekt
         run: ./gradlew detekt --no-daemon || true
