feat: implement data schemas and validation module
- Add features:data-schemas module with comprehensive data validation
- Define typed data schemas for candles, signals, aggregated signals, analysis results, and audit logs
- Implement domain event schemas for inter-module communication
- Add DataValidator with standard, detailed, batch validation, and custom rules
- Create contract tests for schema compatibility and inter-module integration
- Add JSON serialization/deserialization support with Kotlinx Serialization
- Integrate Bean Validation with Jakarta Validation annotations
- Add comprehensive README documentation
- Update CHANGELOG.md with new features

Resolves: Task 11 - Data Quality: Schemas and Contract Tests

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,12 +16,20 @@ jupiter = "6.0.0"
 detekt = "1.23.6"
 hikari = "5.1.0"
 testcontainers = "1.20.3"
+kotlinx-serialization = "1.7.1"
 
 [libraries]
 # self SDKs
 telegram-listener-sdk = { group = "io.github.velkonost", name = "telegram-listener-sdk", version.ref = "telegram-listener-sdk" }
 technical-analysis = { group = "io.github.velkonost", name = "technical-analysis", version.ref = "technical-analysis" }
 binance-sdk = { group = "io.github.velkonost", name = "binance-sdk", version.ref = "binance-sdk" }
+
+# Kotlinx Serialization
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+
+# Validation
+hibernate-validator = { group = "org.hibernate.validator", name = "hibernate-validator", version = "8.0.1.Final" }
+jakarta-el = { group = "org.glassfish", name = "jakarta.el", version = "4.0.2" }
 
 # Kotlin/Coroutines
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
